--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="green" />
     <meta
       name="description"
-      content="Movie DB - See Popular Movies"
+      content="Movie DB"
     />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <!--
